clusters/talos-robbinsdale/apps/hubble-timescape/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-timescape
  namespace: hubble-timescape
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  hostnames:
    - "hubble-timescape.rajsingh.info"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: hubble-timescape-ui
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
